[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
openai = "^1.35.14"
streamlit = "^1.36.0"
streamlit-option-menu = "^0.3.13"
pyyaml = "^6.0.1"
requests = "^2.32.3"
rich = "^13.7.1"
gtts = "^2.5.2"
pydantic = "^2.8.2"
polyline = "^2.0.2"
folium = "^0.17.0"
googlemaps = "^4.10.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"